# fyp-gsr-unified-buccancs

./: ACTUAL_IMPLEMENTATION_STATUS.md  ANDROID_TEST_FIXES_SUMMARY.md  CONFIGURATION_SUMMARY.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  FRAME_CAPTURE_AND_SYNC_ANALYSIS.md  GRADLE_FIXES_SUMMARY.md  HAND_ANALYSIS_IMPLEMENTATION.md  HAND_ANALYSIS_IMPLEMENTATION_SUMMARY.md  HAND_ANALYSIS_TESTING_GUIDE.md  IMPLEMENTATION_FIXES_SUMMARY.md  IMPLEMENTATION_STATUS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSING_FEATURES_ANALYSIS.md  MISSING_FEATURES_IMPLEMENTATION_SUMMARY.md  PC_CONTROLLER_IMPLEMENTATION_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  STUB_IMPLEMENTATIONS_ANALYSIS.md  TESTING.md  UPGRADE_SUMMARY.md  answer.md  missing_features.txt  pyproject.toml  qodana.yaml  setup_python_env.py  test_data_export.java  test_serialization.java
.github/workflows/: qodana_code_quality.yml
android/: build.gradle  gradle.properties  local.properties.template  settings.gradle
android-app/: RAW_FRAME_CAPTURE_TEST.md  build.gradle.kts  gradle.properties  gradle.properties.template  gradlew  gradlew.bat  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/gradle/: libs.versions.toml
android/app/: build.gradle
docs/: APP_USAGE_GUIDE.md  DOCUMENTATION_INDEX.md  Networking_and_Synchronization_Layer.md  README.md
pc-app/: main.py  requirements.txt  test_communication.py
pc-app-linux/: install.py  requirements.txt  test_communication.py  test_cross_platform.py
pc-app-linux/tests/: test_device_manager.py  test_gsr_handler.py
pc-app-macos/: PC_UI_BUILD_SUMMARY.md  README_CROSS_PLATFORM.md  install.py  requirements.txt  test_pyside6_upgrade.py
pc-app-macos/tests/: test_lsl_manager.py  test_session_manager.py
pc-app-windows/: IMPLEMENTATION_SUMMARY.md  install.py  main.py  requirements.txt
pc-app-windows/app/: __init__.py
pc-app-windows/pc-app/: CROSS_PLATFORM_SUMMARY.md
pc-app-windows/tests/: test_file_transfare_manager.py
pc-app/app/: __init__.py
proto/: messages.proto
shared/models/: DataEvent.java  SessionInfo.java
shared/utils/: DataAlignmentUtils.java  DataExporter.java  DataFormatUtils.java  FileNamingUtils.java  TimeSyncUtils.java
windows/: setup.py
windows/app/: data_alignment_utils.py  data_event.py  (+4 more)
windows_controller/: README.md  TEST_SUITE_SUMMARY.md  UPGRADE_SUMMARY.md  requirements.txt  test_modern_gui.py  test_video_playback.py
(+162 files in other folders)
