[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fyp-gsr-unified-buccancs"
version = "1.0.0"
description = "GSR Unified System - Multi-platform application for GSR sensor data collection and analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "GSR Unified Team", email = "team@gsrunified.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "websockets>=11.0.0",
    "pandas>=2.1.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "pylsl>=1.16.0",
    "protobuf>=4.24.4",
    "pyserial>=3.5",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
bluetooth = [
    "pybluez>=0.23; sys_platform == 'win32' or sys_platform == 'linux'",
    "bleak>=0.19.0; sys_platform == 'darwin'",
    "pyshimmer>=0.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
gsr-pc-windows = "pc_app_windows.main:main"
gsr-pc-linux = "pc_app_linux.main:main"
gsr-pc-macos = "pc_app_macos.main:main"

[project.urls]
Homepage = "https://github.com/gsrunified/fyp-gsr-unified-buccancs"
Repository = "https://github.com/gsrunified/fyp-gsr-unified-buccancs"
Issues = "https://github.com/gsrunified/fyp-gsr-unified-buccancs/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | third_party
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
skip_glob = ["third_party/*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "third_party"
]
